# HoloMotion

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  LICENSE  Makefile  NOTICE  README.md  deploy.env  environment_deploy.yaml  environment_train.yaml  pyproject.toml  setup_submodules.sh  train.env
.githooks/: README.md  pre-commit
deployment/: deploy_environment.sh
deployment/unitree_g1_ros2/src/: CMakeLists.txt  package.xml  setup.py
deployment/unitree_g1_ros2/src/config/: g1_21dof_holomotion.yaml
deployment/unitree_g1_ros2/src/humanoid_policy/: policy_node.py
deployment/unitree_g1_ros2/src/humanoid_policy/utils/: command_helper.py  maths.py  motor_crc.py  remote_controller_filter.py  rotation_helper.py  rotations.py
deployment/unitree_g1_ros2/src/include/common/: ros2_sport_client.h  wireless_controller.h
deployment/unitree_g1_ros2/src/launch/: holomotion.launch.py
deployment/unitree_g1_ros2/src/models/: squat_stand_perform13_model_291000.onnx
deployment/unitree_g1_ros2/src/motion_data/: 0-BMLmovi_Subject_48_F_MoSh_Subject_48_F_10_stageii_padded.pkl  0-CMU_94_94_16_stageii_sliced-156-510_padded.pkl  0-HumanEva_S1_Box_1_stageii_padded.pkl  0-KIT_572_bow_slight03_stageii_padded.pkl  squat2stand.pkl  stand2squat.pkl
deployment/unitree_g1_ros2/src/src/: main_node.cpp
deployment/unitree_g1_ros2/src/src/common/: motor_crc.cpp  motor_crc_hg.cpp  ros2_sport_client.cpp  wireless_controller.cpp
docs/: environment_setup.md  evaluate_motion_tracking.md  motion_retargeting.md  mujoco_sim2sim.md  realworld_deployment.md  (+2 more)
holosmpl/: cli.py  (+5 more)
(+470 files in other folders)
