<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>humanoid_control</name>
  <version>0.0.0</version>
  <description>Humanoid locomotion control package from Horizon Robotics</description>
  <maintainer email="unitree@todo.todo">unitree</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>unitree_hg</depend>

  <!-- Python dependencies -->
  <depend>rclpy</depend>
  <depend>python3-numpy</depend>
  <depend>python3-torch</depend>
  <depend>python3-yaml</depend>

  <exec_depend>ros2launch</exec_depend>

  <!-- Keep Python test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
